hphp/hack/test/typecheck/simplihack/simplihack_not_enabled.php.exp
ERROR: File "simplihack_not_enabled.php", line 2, characters 3-76:
Cannot use unstable feature: `simpli_hack` (Parsing[1002])
